--- a/myref.bib
+++ b/myref.bib
@@ -1,3 +1,11 @@
+@article{hamid2025faroese,
+  title={Faroese Whole Genomes Provide Insight into Ancestry and Recent Selection},
+  author={Hamid, Iman and Mortensen, {\'O}lavur and Refoyo-Mart{\'\i}nez, Alba and Lydersen, Leivur N and Emde, Anne-Katrin and Hendershott, Melissa and Apol, Katrin D and Andorsd{\'o}ttir, Gu{\~o}ri{\~o} and Meisner, Jonas and Wasik, Kaja A and others},
+  journal={bioRxiv},
+  pages={2025--05},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory}
+}
 
 @article{santander2024faster,
   title={Faster model-based estimation of ancestry proportions},
