--- a/publications.qmd
+++ b/publications.qmd
@@ -2,11 +2,10 @@
 format: 
     html:
         page-layout: full
-        toc: false
 bibliography: myref.bib
 ---
 
-# My research career 
+## My research career 
 
 During my +7 years of experience as a research scientist at the University of Copenhagen, I have developed novel scientific software, written reproducible open-source computational pipelines, and performed mathematical modelling in large genomic datasets. I worked in human population genetics and the ancient DNA field and established fruitful collaborations with research groups of diverse backgrounds across the globe. This period, helped me develop some powerful skills:
 
@@ -16,7 +15,7 @@ During my +7 years of experience as a research scientist at the University of Co
 - Leadership - mentoring 2 master-level students during my PhD
 - Event management - organising the logistics for +100 Scientists at a Danish conference, activities during the lab retreat for my research centre and a one-day PhD event for the GLOBE Institute
 
-## Research articles
+### Research articles
 
 I have presented my research progress at +5 scientific conferences and produced manuscripts for high-impact journals. Here you can find a summary of the papers I have contributed to: 
 
@@ -31,7 +30,7 @@ I have presented my research progress at +5 scientific conferences and produced 
 - **How Robust Are Cross-Population Signatures of Polygenic Adaptation in Humans?** [@refoyo2021robust]: GWAS robustness and portability to other ancestries
 - **Identifying Loci Under Positive Selection in Complex Population Histories** [@refoyo2019identifying]: graph-based identification of genomic variants 
 
-## Early scientific career 
+### Early scientific career 
 
 Before joining the University of Copenhagen, I gained my first research experience through projects that sparked my curiosity and inspired me to become a scientist. These early experiences played a key role in shaping my passion for research and set me on the path toward a career in bioinformatics. 
 
